# local-file-uploader

./: CMakeLists.txt  README.md
src/: file_saver.cpp  file_saver.h  main.cpp  parse_config.cpp  parse_config.h
web/: index.html
